--- a/MomProductApi/appsettings.json
+++ b/MomProductApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "jjwtevS8fi9AiQUpy_Kr_JHck-AHiisPN-g0QXQSs2g=!",
+    "Issuer": "JwtAuthDemoIssuer"
+  },
   "AllowedHosts": "*"
 }
