--- a/MomProductApi/appsettings.json
+++ b/MomProductApi/appsettings.json
@@ -9,5 +9,8 @@
     "Key": "jjwtevS8fi9AiQUpy_Kr_JHck-AHiisPN-g0QXQSs2g=!",
     "Issuer": "JwtAuthDemoIssuer"
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=TestDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
