Add BlogType Apis

--- a/MomProductApi/appsettings.json
+++ b/MomProductApi/appsettings.json
@@ -10,7 +10,7 @@
     "Issuer": "JwtAuthDemoIssuer"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=TestDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-ILE40BG\\SQLEXPRESS;Database=MomProduct;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
